--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>Sorry, your browser does not support the HTML5 <code>&lt;canvas&gt;</code> element</p>
         </canvas>
         <script type="text/javascript" src="scripts/three.min.js"></script>
+        <script type="text/javascript" src="scripts/stats.min.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
     </div>
