--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </canvas>
         <script type="text/javascript" src="scripts/three.min.js"></script>
         <script type="text/javascript" src="scripts/stats.min.js"></script>
+        <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
     </div>
