--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <div id="container">
         <canvas id="canvas" tabindex="1"></canvas>
         <script type="text/javascript" src="scripts/three.min.js"></script>
-         <script type="text/javascript" src="scripts/game-shim.js"></script>
+        <script type="text/javascript" src="scripts/game-shim.js"></script>
         <script type="text/javascript" src="scripts/stats.min.js"></script>
+        <script type="text/javascript" src="scripts/utilities.js"></script>
 	    <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
