Game is now the full window size
Changed onresize function, changed the minimap position (always on
bottom right), set canvas height/width to window height/width

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>CS679 - Project 2</title>
     <!-- <meta charset="utf8"> -->
+    <style>
+	body{
+		margin:0; 
+		padding:0;
+		overflow: hidden;
+	}
+	</style>
 </head>
 
 <body>
