Added tween.js library for smooth animations, fixed door animation bug

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <script type="text/javascript" src="scripts/three.min.js"></script>
         <script type="text/javascript" src="scripts/game-shim.js"></script>
         <script type="text/javascript" src="scripts/stats.min.js"></script>
+        <script type="text/javascript" src="scripts/tween.js"></script>
         <script type="text/javascript" src="scripts/utilities.js"></script>
-	    <script type="text/javascript" src="scripts/level.js"></script>
+        <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
     </div>
