--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="scripts/three.min.js"></script>
         <script type="text/javascript" src="scripts/game-shim.js"></script>
         <script type="text/javascript" src="scripts/stats.min.js"></script>
-        <script type="text/javascript" src="scripts/tween.js"></script>
+        <script type="text/javascript" src="scripts/Tween.js"></script>
         <script type="text/javascript" src="scripts/utilities.js"></script>
         <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
