Player has health and can be damaged by touching zombies

--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html>
 <head>
     <title>CS679 - Project 2</title>
-    <!-- <meta charset="utf8"> -->
-    <style>
-	body{
-		margin:0; 
-		padding:0;
-		overflow: hidden;
-	}
-	</style>
+    <meta charset="utf8">
 </head>
 
 <body>
+    <div><center><p id="healthbar">player health: 100%</p></center></div>
     <div id="container">
         <canvas id="canvas" tabindex="1"></canvas>
         <script type="text/javascript" src="scripts/three.min.js"></script>
