Health information displayed at bottom like counter-strike

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div><center><p id="healthbar">player health: 100%</p></center></div>
+    <!--<div><center><p id="healthbar">player health: 100%</p></center></div>-->
     <div id="container">
         <canvas id="canvas" tabindex="1"></canvas>
         <script type="text/javascript" src="scripts/three.min.js"></script>
