silly sound effect added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--<div><center><p id="healthbar">player health: 100%</p></center></div>-->
     <div id="container">
         <canvas id="canvas" tabindex="1"></canvas>
+        <span id="sound"></span>
         <script type="text/javascript" src="scripts/three.min.js"></script>
         <script type="text/javascript" src="scripts/game-shim.js"></script>
         <script type="text/javascript" src="scripts/stats.min.js"></script>
