--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
+        <audio id="audio" src="sound/background.mp3" loop autoplay />
     </div>
 </body>
 
