mixed sound achieved by multi channels

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
         <script type="text/javascript" src="scripts/level.js"></script>
         <script type="text/javascript" src="scripts/game.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
-        <audio id="audio" src="sound/background.mp3" loop autoplay />
     </div>
+    <audio id="background" src="sound/background.mp3" loop autoplay />
+    <audio id="foreground0" autoplay />
+    <audio id="foreground1" autoplay />
+    <audio id="foreground2" autoplay />
+    <audio id="foreground3" autoplay />
+    <audio id="foreground4" autoplay />
 </body>
 
 </html>
